Don't upload "null" to the Sync server for empty federation_url.

BUG=593380

Review URL: https://codereview.chromium.org/1780683002

Cr-Commit-Position: refs/heads/master@{#380164}

Former-commit-id: c1e26c7b4a6f7d692312f4de15996e33b1c10a90